Fix mobile layout bugs for travel reports

--- a/_sass/_pages/_outgoing.scss
+++ b/_sass/_pages/_outgoing.scss
@@ -6,6 +6,15 @@ section.outgoing-hero {
   padding: 30px 0;
   position: relative;
 }
+section.general-outgoing-information {
+  .heading-separator {
+    margin-left: 0;
+  }
+  
+  .btn {
+    margin: 20px auto 20px 0;
+  }
+}
 
 section.application-step {
 
